# Hibiscus

./: .gitignore  CMakeLists.txt  README.md  package.cmake
.devcontainer/: Dockerfile
source/: Algorithm.cpp  Algorithm.hpp  DirectoryStorage.cpp  DirectoryStorage.hpp  FileObserver.cpp  FileObserver.hpp  FolderInformation.cpp  FolderInformation.hpp  Hibicus_definitions.hpp  Processor.hpp  Request.cpp  Request.hpp  main.cpp
source/client/: Client.cpp  Client.hpp
source/config/: Configuration.cpp  Configuration.hpp
source/exceptions/: exception.cpp  exception.hpp
source/logger/: logger.hpp
source/parser/: Document.cpp  Document.hpp
tests/: CMakeLists.txt
tests/unit/: AlgorithmTest.cpp  main.cpp
tools/: x64compile.sh
